# jpm

./: .gitignore  .markdownlint.json  Cargo.toml  README.md  plugins-lock.txt  plugins.txt
.github/workflows/: ci.yml  release.yml  security-audit.yml  smoke-live-uc.yml
docs/: build-linux-x86_64-from-macos.md  comparison.md  doctor-design.md  feature-status.md  graph-design.md  install.md  jenkins-compat-check.md  lock.md  roots-design.md
sample/: plugins-lock.txt  plugins.txt
src/: bundled.rs  detached.rs  doctor.rs  graph.rs  installer.rs  lockfile.rs  main.rs  parser.rs  resolver.rs  roots.rs  update_center.rs  version.rs
tests/: integration_test.rs
tests/fixtures/: plugin-versions.json  pom.xml  uc-stable.json
