[package]
name = "jpm"
version = "0.1.0"
edition = "2021"
description = "Jenkins Plugin Manager - generates reproducible plugin lock files"

[[bin]]
name = "jpm"
path = "src/main.rs"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
quick-xml = { version = "0.37", features = ["serialize"] }
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
dirs = "5"
