[package]
name = "jpm"
version = "0.1.0"
edition = "2021"
description = "Jenkins Plugin Manager - generates reproducible plugin lock files"
license = "MIT"

[[bin]]
name = "jpm"
path = "src/main.rs"

[dependencies]
anyhow = "1"
base64 = "0.22"
clap = { version = "4", features = ["derive"] }
dirs = "5"
quick-xml = { version = "0.37", features = ["serialize"] }
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
tempfile = "3"
tokio = { version = "1", features = ["full"] }
zip = "2"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true

[dev-dependencies]
assert_cmd = "2.2.0"
wiremock = "0.6.5"
